Adding validation basics
Just checking function fires on each step change and the correct step is logged in the console

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                     <legend class="slds-form-element__legend slds-form-element__label">Select the type of promotion</legend>
                     <div class="slds-form-element__control">
                         <span class="slds-radio">
-                            <input type="radio" class="promotion_type" id="radio-1" value="online" name="promotionType" />
+                            <input type="radio" class="promotion_type" id="radio-1" value="online" name="promotionType" checked="checked" />
                             <label class="slds-radio__label" for="radio-1">
                                 <span class="slds-radio_faux"></span>
                                 <span class="slds-form-element__label">Online Code Only</span>
