Lots of validation
Probably won't work

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
     <div id="step1" class="step">
         <div class="slds-grid slds-gutters">
-            <div class="slds-col slds-size_1-of-2">
+            <div id="online_communication_history" class="slds-col slds-size_1-of-2">
                 <h2>Communication History Data</h2>
 
                 <div class="slds-form-element">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="communication_cell_code_online" placeholder="Communication Cell Code" class="slds-input" />
+                        <input data-attribue-type="int" data-attribute-length="30" type="text" id="communication_cell_code_online" placeholder="Communication Cell Code" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__communication_cell_code_online">This field is required</div>
 
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="cell_code_online" placeholder="Cell Code" class="slds-input" />
+                        <input data-attribue-type="varchar" data-attribute-length="30" type="text" id="cell_code_online" placeholder="Cell Code" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__cell_code_online">This field is required</div>
                 </div>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="cell_name_online" placeholder="Cell Name" class="slds-input" />
+                        <input data-attribue-type="varchar" data-attribute-length="30" type="text" id="cell_name_online" placeholder="Cell Name" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__cell_name_online">This field is required</div>
                 </div>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_name_online" placeholder="Campaign Name" class="slds-input" />
+                        <input data-attribue-type="varchar" data-attribute-length="30" type="text" id="campaign_name_online" placeholder="Campaign Name" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__campaign_name_online">This field is required</div>
                 </div>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="number" id="campaign_id_online" placeholder="Campaign ID" class="slds-input" />
+                        <input data-attribue-type="int" data-attribute-length="30" id="campaign_id_online" placeholder="Campaign ID" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__campaign_id_online">This field is required</div>
                 </div>
@@ -169,13 +169,13 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_code_online" placeholder="Campaign Code" class="slds-input" />
+                        <input data-attribue-type="varchar" data-attribute-length="30" type="text" id="campaign_code_online" placeholder="Campaign Code" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__campaign_code_online">This field is required</div>
                 </div>
             </div>
 
-            <div class="slds-col slds-size_1-of-2">
+            <div id="online_data" class="slds-col slds-size_1-of-2">
 
                 <h2>Online Code Setup</h2>
 
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="number" id="mc_unique_promotion_id_online" placeholder="MC Unique Promotion ID" class="slds-input" />
+                        <input data-attribue-type="int" data-attribute-length="30" id="mc_unique_promotion_id_online" placeholder="MC Unique Promotion ID" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__campaign_code_online">This field must be unique.</div>
                 </div>
@@ -212,7 +212,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="global_code_online" placeholder="Global Online Code" class="slds-input" />
+                        <input data-attribue-type="varchar" data-attribute-length="30" type="text" id="global_code_online" placeholder="Global Online Code" class="slds-input" />
                     </div>
                 </div>
 
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="voucher_pot_online" placeholder="Voucher Pot Name" class="slds-input" />
+                        <input data-attribue-type="int" data-attribute-length="300" type="text" id="voucher_pot_online" placeholder="Voucher Pot Name" class="slds-input" />
                     </div>
                 </div>
 
@@ -319,7 +319,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="promotion_id_online" placeholder="Promotion ID" class="slds-input" />
+                        <input data-attribue-type="int" data-attribute-length="30" type="text" id="promotion_id_online" placeholder="Promotion ID" class="slds-input" />
                     </div>
                 </div>
 
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="promotion_group_id_online" placeholder="Promotion Group ID" class="slds-input" />
+                        <input data-attribue-type="int" data-attribute-length="30" type="text" id="promotion_group_id_online" placeholder="Promotion Group ID" class="slds-input" />
                     </div>
                 </div>
             </div>
@@ -347,7 +347,7 @@
     <div id="step2" class="step">
         <div class="slds-grid slds-gutters">
 
-            <div class="slds-col slds-size_1-of-2">
+            <div id="instore_communication_history" class="slds-col slds-size_1-of-2">
                 <h2>Communication History Data</h2>
 
                 <div class="slds-form-element">
@@ -360,11 +360,11 @@
                             <span class="slds-assistive-text">Help</span>
                         </button>
                         <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="communication_cell_code_instore__help" style="position:absolute;top:-34px;left:-16px;width:168px">
-                            <div class="slds-popover__body">Enter a communication cell code.</div>
+                            <div class="slds-popover__body">Enter a communication cell code number. This must be a number and less than 30 digits.</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="communication_cell_code_instore" placeholder="Communication Cell Code" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="30" type="text" id="communication_cell_code_instore" placeholder="Communication Cell Code" class="slds-input" />
                     </div>
                 </div>
                 <div class="slds-form-element">
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="cell_code_instore" placeholder="Cell Code" class="slds-input" />
+                        <input data-attriubute-type="varchar" data-attribute-length="30" type="text" id="cell_code_instore" placeholder="Cell Code" class="slds-input" />
                     </div>
                 </div>
                 <div class="slds-form-element">
@@ -398,7 +398,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="cell_name_instore" placeholder="Cell Name" class="slds-input" />
+                        <input data-attriubute-type="varchar" data-attribute-length="30" type="text" id="cell_name_instore" placeholder="Cell Name" class="slds-input" />
                     </div>
                 </div>
                 <div class="slds-form-element">
@@ -415,7 +415,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_name_instore" placeholder="Campaign Name" class="slds-input" />
+                        <input data-attriubute-type="varchar" data-attribute-length="30" type="text" id="campaign_name_instore" placeholder="Campaign Name" class="slds-input" />
                     </div>
                 </div>
                 <div class="slds-form-element">
@@ -432,7 +432,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="number" id="campaign_id_instore" placeholder="Campaign ID" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="30" id="campaign_id_instore" placeholder="Campaign ID" class="slds-input" />
                     </div>
                 </div>
                 <div class="slds-form-element">
@@ -449,12 +449,12 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_code_instore" placeholder="Campaign Code Instore" class="slds-input" />
+                        <input data-attriubute-type="varchar" data-attribute-length="30" type="text" id="campaign_code_instore" placeholder="Campaign Code Instore" class="slds-input" />
                     </div>
                 </div>
             </div>
 
-            <div class="slds-col slds-size_1-of-2">
+            <div id="instore_data" class="slds-col slds-size_1-of-2">
 
                 <h2>In-store Code Setup</h2>
 
@@ -468,11 +468,11 @@
                             <span class="slds-assistive-text">Help</span>
                         </button>
                         <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="mc_unique_promotion_id_instore__help" style="position:absolute;top:-34px;left:-16px;width:168px">
-                            <div class="slds-popover__body">Enter a unique code for the MC Promotion ID.</div>
+                            <div class="slds-popover__body">Enter a unique code for the MC Promotion ID. Must be a number.</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="number" id="mc_unique_promotion_id_instore" placeholder="MC Unique Promotion ID" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="30" id="mc_unique_promotion_id_instore" placeholder="MC Unique Promotion ID" class="slds-input" />
                     </div>
                 </div>
 
@@ -583,7 +583,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="promotion_id_instore" placeholder="Promotion ID" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="30" type="text" id="promotion_id_instore" placeholder="Promotion ID" class="slds-input" />
                     </div>
                 </div>
 
@@ -601,7 +601,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="promotion_group_id_instore" placeholder="Promotion Group ID" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="30" type="text" id="promotion_group_id_instore" placeholder="Promotion Group ID" class="slds-input" />
                     </div>
                 </div>
             </div>
