--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
                         <div class="slds-form-element__control">
                             <div class="slds-select_container">
                                 <select class="slds-select" id="email_template">
-                                      <option value="no-code">No Template</option>
+                                      <option value="no-template">No Template</option>
                                 </select>
                             </div>
                         </div>
