--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                 </fieldset>
                 <fieldset class="slds-form-element slds-form-element_stacked">
                     <legend class="slds-form-element__legend slds-form-element__label">Email Template</legend>
-                    <div class="slds-form-element sfmc-input">
+                    <div class="slds-form-element sfmc-input" id="email_template_select">
                         <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Select the Email template you want to use this promotion on.</label>
                         <div class="slds-form-element__icon">
                             <button class="slds-button slds-button_icon" id="email_template__help_button" aria-describedby="help">
