--- a/public/index.html
+++ b/public/index.html
@@ -806,6 +806,9 @@
         <div class="slds-grid slds-gutters" id="summary-margin-top">
             <div class="slds-col slds-size_1-of-3">
                 <h1>All Set</h1>
+                <pre>
+                    <span id="summary_json"></span>
+                </pre>
             </div>
         </div>
     </div>
