--- a/public/index.html
+++ b/public/index.html
@@ -554,7 +554,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="30" type="text" id="promotion_id_online" placeholder="Promotion ID (e.g 12345)" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="10" type="number" min="0" max="2147483647" id="promotion_id_online" placeholder="Promotion ID (e.g 12345)" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__promotion_id_online">Cannot be empty and must be less than 30 characters. Must be a number.</div>
                 </div>
@@ -573,7 +573,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="30" type="text" id="promotion_group_id_online" placeholder="Promotion Group ID (e.g 12345)" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="10" type="number" min="0" max="2147483647" id="promotion_group_id_online" placeholder="Promotion Group ID (e.g 12345)" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__promotion_group_id_online">Cannot be empty and must be less than 30 characters. Must be a number.</div>
                 </div>
@@ -767,7 +767,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attriubute-type="int" data-attribute-length="30" type="text" id="promotion_id_instore" placeholder="Promotion ID" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="10" type="number" min="0" max="2147483647" id="promotion_id_instore" placeholder="Promotion ID" class="slds-input" />
                     </div>
                 </div>
 
@@ -785,7 +785,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attriubute-type="int" data-attribute-length="30" type="text" id="promotion_group_id_instore" placeholder="Promotion Group ID" class="slds-input" />
+                        <input data-attriubute-type="int" data-attribute-length="10" type="number" min="0" max="2147483647" id="promotion_group_id_instore" placeholder="Promotion Group ID" class="slds-input" />
                     </div>
                 </div>
             </div>
