--- a/public/index.html
+++ b/public/index.html
@@ -463,8 +463,9 @@
                             </div>
                         </div>
                     </div>
-                        
-
+                    <div id="pot_1_count"></div>
+                    <div id="pot_2_count"></div>    
+                    <div id="pot_2_count"></div>
                 </div>
             </div>
 
