--- a/public/index.html
+++ b/public/index.html
@@ -805,9 +805,22 @@
     <div id="step3" class="step">
 
         <div class="slds-grid slds-gutters" id="summary-margin-top">
+            <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
+                <div class="slds-media__figure">
+                    <span class="slds-icon_container slds-icon-utility-info" title="information">
+                        <svg class="slds-icon slds-icon_small slds-icon-text-default" aria-hidden="true">
+                            <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
+                        </svg>
+                        <span class="slds-assistive-text">Online Promotion Association Key</span>
+                    </span>
+                </div>
+                <div class="slds-media__body">
+                    <p>Your promotion is all setup and ready to go.</p>
+                </div>
+            </div>
             <div class="slds-col slds-size_1-of-3">
                 <h1>All Set</h1>
-                <p id="summary_json"></p>
+                <div id="summary_json"></div>
             </div>
         </div>
     </div>
