--- a/public/index.html
+++ b/public/index.html
@@ -818,9 +818,13 @@
                     <p>Your promotion is all setup and ready to go.</p>
                 </div>
             </div>
-            <div class="slds-col slds-size_1-of-3">
-                <h1>All Set</h1>
-                <div id="summary_json"></div>
+            <div class="slds-grid slds-gutters" id="summary-margin-top">
+                <div class="slds-col slds-size_1-of-2">
+                    <div id="summary_json_key"></div>
+                </div>
+                <div class="slds-col slds-size_1-of-2">
+                    <div id="summary_json_value"></div>
+                </div>
             </div>
         </div>
     </div>
