--- a/public/index.html
+++ b/public/index.html
@@ -821,11 +821,11 @@
         </div>
         <div class="slds-grid slds-gutters" id="summary-margin-top">
             <div class="slds-col slds-size_1-of-2">
-                <h1>Name</h1>
+                <h1><b>Name</b></h1>
                 <div id="summary_json_key"></div>
             </div>
             <div class="slds-col slds-size_1-of-2">
-                <h1>Value</h1>
+                <h1><b>Value</b></h1>
                 <div id="summary_json_value"></div>
             </div>
         </div>
