--- a/public/index.html
+++ b/public/index.html
@@ -264,7 +264,8 @@
 
             <div id="online_data" class="slds-col slds-size_1-of-2">
 
-                <h2>Online Code Setup</h2>
+                <h2>Online Codes</h2>
+
                 <legend class="slds-form-element__legend slds-form-element__label">Do you wish to use a global code or a voucher pot?</legend>
                 <fieldset class="slds-form-element slds-form-element_stacked">
                     <legend class="slds-form-element__legend slds-form-element__label">Select type of online promotion</legend>
@@ -470,6 +471,9 @@
             </div>
 
             <div class="slds-col slds-size_1-of-2">
+
+                <h2>Online Meta Data</h2>
+
                 <div class="slds-form-element sfmc-input">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Print at Till</label>
                     <div class="slds-form-element__icon">
@@ -610,6 +614,7 @@
 
             <div id="instore_data" class="slds-col slds-size_1-of-2">
 
+                <h2>In-store Codes</h2>
 
                 <div class="slds-form-element sfmc-input">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">In-store Code 1</label>
@@ -681,7 +686,7 @@
 
             <div id="instore_data" class="slds-col slds-size_1-of-2">
 
-                <h2>In-store Code Setup</h2>
+                <h2>In-store Meta Data</h2>
 
                 <div class="slds-form-element sfmc-input">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Print at Till</label>
