--- a/public/index.html
+++ b/public/index.html
@@ -360,7 +360,7 @@
 
           
                     <div class="slds-form-element sfmc-input">
-                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Unique Vouhcer Pot 1</label>
+                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Unique Voucher Pot 1</label>
                         <div class="slds-form-element__icon">
                             <button class="slds-button slds-button_icon" id="voucher_pot_1__help_button" aria-describedby="help">
                                 <svg class="slds-button__icon" aria-hidden="true">
@@ -396,7 +396,7 @@
 
 
                     <div class="slds-form-element sfmc-input">
-                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Unique Vouhcer Pot 2</label>
+                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Unique Voucher Pot 2</label>
                         <div class="slds-form-element__icon">
                             <button class="slds-button slds-button_icon" id="voucher_pot_2__help_button" aria-describedby="help">
                                 <svg class="slds-button__icon" aria-hidden="true">
@@ -431,7 +431,7 @@
                     </div>
                     
                     <div class="slds-form-element sfmc-input">
-                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Unique Vouhcer Pot 3</label>
+                        <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Unique Voucher Pot 3</label>
                         <div class="slds-form-element__icon">
                             <button class="slds-button slds-button_icon" id="voucher_pot_3__help_button" aria-describedby="help">
                                 <svg class="slds-button__icon" aria-hidden="true">
