--- a/public/index.html
+++ b/public/index.html
@@ -473,7 +473,7 @@
                 <div class="slds-form-element">
                     <div class="slds-form-element__control">
                         <div class="slds-checkbox">
-                            <input type="checkbox" name="options" id="online_code_date_override_1" value="online_code_date_override_1"/>
+                            <input type="checkbox" name="options" id="online_code_date_override_1" value=""/>
                             <label class="slds-checkbox__label" for="online_code_date_override_1">
                                 <span class="slds-checkbox_faux"></span>
                                 <span class="slds-form-element__label">Override Code 1 Date?</span>
@@ -485,29 +485,29 @@
                 <div class="slds-form-element sfmc-input">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Voucher valid for X days from day email is sent</label>
                     <div class="slds-form-element__icon">
-                        <button class="slds-button slds-button_icon" id="online_voucher_date_override_1__help_button" aria-describedby="help">
+                        <button class="slds-button slds-button_icon" id="online_voucher_date_override_1_days__help_button" aria-describedby="help">
                             <svg class="slds-button__icon" aria-hidden="true">
                                 <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override_1_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
                             <div class="slds-popover__body">Enter an amount of days</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="online_voucher_date_override_1" placeholder="" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="online_voucher_date_override_1_days" placeholder="0" class="slds-input" />
                     </div>
-                    <div class="slds-form-element__help" id="form-error__promotion_id_online_1">Please enter how many days the voucher is valid for from day of send</div>
+                    <div class="slds-form-element__help" id="form-error__online_voucher_date_override_1_days">Please enter how many days the voucher is valid for from day of send</div>
                 </div>
 
                 <div class="slds-form-element">
                     <div class="slds-form-element__control">
                         <div class="slds-checkbox">
-                            <input type="checkbox" name="options" id="online_code_date_override_2" value="online_code_date_override_2"/>
+                            <input type="checkbox" name="options" id="online_code_date_override_2" value=""/>
                             <label class="slds-checkbox__label" for="online_code_date_override_2">
                                 <span class="slds-checkbox_faux"></span>
-                                <span class="slds-form-element__label">Override Code 2 Date?</span>
+                                <span class="slds-form-element__label">Override Code 1 Date?</span>
                             </label>
                         </div>
                     </div>
@@ -516,26 +516,26 @@
                 <div class="slds-form-element sfmc-input">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Voucher valid for X days from day email is sent</label>
                     <div class="slds-form-element__icon">
-                        <button class="slds-button slds-button_icon" id="online_voucher_date_override_2__help_button" aria-describedby="help">
+                        <button class="slds-button slds-button_icon" id="online_voucher_date_override_2_days__help_button" aria-describedby="help">
                             <svg class="slds-button__icon" aria-hidden="true">
                                 <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override_2_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
                             <div class="slds-popover__body">Enter an amount of days</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="online_voucher_date_override_2" placeholder="" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="online_voucher_date_override_2_days" placeholder="0" class="slds-input" />
                     </div>
-                    <div class="slds-form-element__help" id="form-error__promotion_id_online_2">Please enter how many days the voucher is valid for from day of send</div>
+                    <div class="slds-form-element__help" id="form-error__online_voucher_date_override_2_days">Please enter how many days the voucher is valid for from day of send</div>
                 </div>
 
                 <div class="slds-form-element">
                     <div class="slds-form-element__control">
                         <div class="slds-checkbox">
-                            <input type="checkbox" name="options" id="online_code_date_override_3" value="online_code_date_override_3"/>
+                            <input type="checkbox" name="options" id="online_code_date_override_3" value=""/>
                             <label class="slds-checkbox__label" for="online_code_date_override_3">
                                 <span class="slds-checkbox_faux"></span>
                                 <span class="slds-form-element__label">Override Code 3 Date?</span>
@@ -547,20 +547,20 @@
                 <div class="slds-form-element sfmc-input">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Voucher valid for X days from day email is sent</label>
                     <div class="slds-form-element__icon">
-                        <button class="slds-button slds-button_icon" id="online_voucher_date_override_3__help_button" aria-describedby="help">
+                        <button class="slds-button slds-button_icon" id="online_voucher_date_override_3_days__help_button" aria-describedby="help">
                             <svg class="slds-button__icon" aria-hidden="true">
                                 <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override_3__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override_3_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
                             <div class="slds-popover__body">Enter an amount of days</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="online_voucher_date_override_3" placeholder="" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="online_voucher_date_override_3_days" placeholder="0" class="slds-input" />
                     </div>
-                    <div class="slds-form-element__help" id="form-error__promotion_id_online_3">Please enter how many days the voucher is valid for from day of send</div>
+                    <div class="slds-form-element__help" id="form-error__online_voucher_date_override_3_days">Please enter how many days the voucher is valid for from day of send</div>
                 </div>
 
             </div>
@@ -782,7 +782,7 @@
                 <div class="slds-form-element">
                     <div class="slds-form-element__control">
                         <div class="slds-checkbox">
-                            <input type="checkbox" name="options" id="instore_code_date_override_1" value="instore_code_date_override_1"/>
+                            <input type="checkbox" name="options" id="instore_code_date_override_1" value=""/>
                             <label class="slds-checkbox__label" for="instore_code_date_override_1">
                                 <span class="slds-checkbox_faux"></span>
                                 <span class="slds-form-element__label">Override Code 1 Date?</span>
@@ -800,23 +800,23 @@
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override_1_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="instore_voucher_date_override_1_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
                             <div class="slds-popover__body">Enter an amount of days</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_1_days" placeholder="" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_1_days" placeholder="0" class="slds-input" />
                     </div>
-                    <div class="slds-form-element__help" id="form-error__instore_voucher_date_override_1">Please enter how many days the voucher is valid for from day of send</div>
+                    <div class="slds-form-element__help" id="form-error__instore_voucher_date_override_1_days">Please enter how many days the voucher is valid for from day of send</div>
                 </div>
 
                 <div class="slds-form-element">
                     <div class="slds-form-element__control">
                         <div class="slds-checkbox">
-                            <input type="checkbox" name="options" id="instore_code_date_override_2" value="instore_code_date_override_2"/>
+                            <input type="checkbox" name="options" id="instore_code_date_override_2" value=""/>
                             <label class="slds-checkbox__label" for="instore_code_date_override_2">
                                 <span class="slds-checkbox_faux"></span>
-                                <span class="slds-form-element__label">Override Code 2 Date?</span>
+                                <span class="slds-form-element__label">Override Code 1 Date?</span>
                             </label>
                         </div>
                     </div>
@@ -831,12 +831,12 @@
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="online_voucher_date_override_2_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="instore_voucher_date_override_2_days__help" style="position:absolute;top:-34px;left:-16px;width:168px">
                             <div class="slds-popover__body">Enter an amount of days</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_2_days" placeholder="" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_2_days" placeholder="0" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__instore_voucher_date_override_2_days">Please enter how many days the voucher is valid for from day of send</div>
                 </div>
@@ -844,10 +844,10 @@
                 <div class="slds-form-element">
                     <div class="slds-form-element__control">
                         <div class="slds-checkbox">
-                            <input type="checkbox" name="options" id="instore_code_date_override_3" value="online_code_date_override_3"/>
+                            <input type="checkbox" name="options" id="instore_code_date_override_3" value=""/>
                             <label class="slds-checkbox__label" for="instore_code_date_override_3">
                                 <span class="slds-checkbox_faux"></span>
-                                <span class="slds-form-element__label">Override Code 3 Date?</span>
+                                <span class="slds-form-element__label">Override Code 1 Date?</span>
                             </label>
                         </div>
                     </div>
@@ -867,7 +867,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_3_days" placeholder="" class="slds-input" />
+                        <input data-attribute-type="int" data-attribute-length="3" type="number" min="0" max="365" id="instore_voucher_date_override_3_days" placeholder="0" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__instore_voucher_date_override_3_days">Please enter how many days the voucher is valid for from day of send</div>
                 </div>
