--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
                         <div class="slds-form-element__control">
                             <div class="slds-select_container">
                                 <select class="slds-select" id="email_template">
-                                      <option value="no-template">Loading...</option>
+                                      <option value="loading">Loading...</option>
                                       <option value="no-template">no-template</option>
                                 </select>
                             </div>
